[Cherry-pick to branch-1.2] [#10373] fix(client): Support runing JDK8 with Gravitino client (#10376) (#10392)
**Cherry-pick Information:**
- Original commit: 63d176b80014bd91dd00bfe7c1ad5c5fe9365391
- Target branch: `branch-1.2`
- Status: ⚠️ **Has conflicts - manual resolution required**

Please review and resolve the conflicts before merging.

---------

Co-authored-by: Qi Yu <yuqi@datastrato.com>
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>